feat(api): Adjust author and title filtering and distance calculation using levenshteinDistance